[build-system]
requires = [
    "setuptools >= 42",
    "setuptools_scm[toml] >= 6.2",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
    "cython",
]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["tokamesh", "tokamesh.triangle", "tokamesh.tokamaks"]
zip-safe = false
license-files = ["LICENSE"]
include-package-data = false


[tool.setuptools_scm]
write_to = "tokamesh/_version.py"
git_describe_command = "git describe --dirty --tags --long --first-parent"


[tool.cibuildwheel]
skip = ["*-win32", "*-manylinux_i686", "pp*", "*musllinux*", "cp36-manylinux_aarch64"]
test-extras = ["tests"]
test-command = "pytest {project}/tests"


[project]
name = "tokamesh"
dynamic = ["version"]
authors = [
    {name = "Chris Bowman", email = "chris.bowman.physics@gmail.com"},
]
description = "Python tools for constructing meshes and geometry matrices used in tomography problems"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.24.4",
    "scipy >= 1.10.1",
    "matplotlib >= 3.5.3",
]


[project.readme]
file = "README.md"
content-type = "text/markdown"


[project.urls]
Homepage = "https://github.com/C-bowman/tokamesh"
Source = "https://github.com/C-bowman/tokamesh"
Tracker = "https://github.com/C-bowman/tokamesh/issues"
Documentation = "https://tokamesh.readthedocs.io/en/stable/"


[project.optional-dependencies]
tests = [
    "pytest >= 3.3.0",
    "pytest-cov >= 3.0.0",
    "pyqt5 >= 5.15",
    "hypothesis >= 6.24",
    "freezegun >= 1.1.0",
]


[tool.distutils.build_ext]
inplace = 1