[build-system]
requires = [
    "setuptools >= 42",
    "setuptools_scm[toml] >= 6.2",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["tokamesh", "tokamesh.tokamaks"]
license-files = ["LICENSE"]


[tool.setuptools_scm]
write_to = "tokamesh/_version.py"
git_describe_command = "git describe --dirty --tags --long --first-parent"


[project]
name = "tokamesh"
dynamic = ["version"]
authors = [
    {name = "Chris Bowman", email = "chris.bowman.physics@gmail.com"},
]
description = "Python tools for constructing meshes and geometry matrices used in tomography problems"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.24.4",
    "scipy >= 1.10.1",
    "matplotlib >= 3.5.3",
    "triangle >= 20230923"
]


[project.readme]
file = "README.md"
content-type = "text/markdown"


[project.urls]
Homepage = "https://github.com/C-bowman/tokamesh"
Source = "https://github.com/C-bowman/tokamesh"
Tracker = "https://github.com/C-bowman/tokamesh/issues"
Documentation = "https://tokamesh.readthedocs.io/en/stable/"


[project.optional-dependencies]
tests = [
    "pytest >= 3.3.0",
    "pytest-cov >= 3.0.0",
    "hypothesis >= 6.24",
    "freezegun >= 1.1.0",
]