[metadata]
name = tokamesh
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/C-bowman/tokamesh
author = Chris Bowman
author_email = chris.bowman.physics@gmail.com
description = Python tools for constructing meshes and geometry matrices used in tomography problems
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/C-bowman/tokamesh
    Tracker = https://github.com/C-bowman/tokamesh/issues

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.8
    scipy >= 1.5
    matplotlib >= 3.3.0
    importlib-metadata; python_version < "3.8"
setup_requires = cython
zip_safe = False

[options.extras_require]
tests =
    pytest >= 3.3.0
    pytest-cov >= 3.0.0
    hypothesis >= 6.24
docs =
    sphinx ~= 3.5.4
    sphinx_rtd_theme

[build_sphinx]
source-dir = docs/source

[build_ext]
inplace = 1
